seaqt/QtGui/gen_qpainterpath.nim


proc fcQPainterPath_operatorAssign(self: pointer, other: pointer): void {.importc: "QPainterPath_operatorAssign".}
proc fcQPainterPath_swap(self: pointer, other: pointer): void {.importc: "QPainterPath_swap".}
proc fcQPainterPath_clear(self: pointer): void {.importc: "QPainterPath_clear".}
proc fcQPainterPath_reserve(self: pointer, size: cint): void {.importc: "QPainterPath_reserve".}
proc fcQPainterPath_capacity(self: pointer): cint {.importc: "QPainterPath_capacity".}
proc fcQPainterPath_closeSubpath(self: pointer): void {.importc: "QPainterPath_closeSubpath".}
proc fcQPainterPath_moveTo(self: pointer, p: pointer): void {.importc: "QPainterPath_moveTo".}
proc fcQPainterPath_moveTo2(self: pointer, x: float64, y: float64): void {.importc: "QPainterPath_moveTo2".}
proc fcQPainterPath_lineTo(self: pointer, p: pointer): void {.importc: "QPainterPath_lineTo".}
proc fcQPainterPath_lineTo2(self: pointer, x: float64, y: float64): void {.importc: "QPainterPath_lineTo2".}
proc fcQPainterPath_arcMoveTo(self: pointer, rect: pointer, angle: float64): void {.importc: "QPainterPath_arcMoveTo".}
proc fcQPainterPath_arcMoveTo2(self: pointer, x: float64, y: float64, w: float64, h: float64, angle: float64): void {.importc: "QPainterPath_arcMoveTo2".}
proc fcQPainterPath_arcTo(self: pointer, rect: pointer, startAngle: float64, arcLength: float64): void {.importc: "QPainterPath_arcTo".}
proc fcQPainterPath_arcTo2(self: pointer, x: float64, y: float64, w: float64, h: float64, startAngle: float64, arcLength: float64): void {.importc: "QPainterPath_arcTo2".}
proc fcQPainterPath_cubicTo(self: pointer, ctrlPt1: pointer, ctrlPt2: pointer, endPt: pointer): void {.importc: "QPainterPath_cubicTo".}
proc fcQPainterPath_cubicTo2(self: pointer, ctrlPt1x: float64, ctrlPt1y: float64, ctrlPt2x: float64, ctrlPt2y: float64, endPtx: float64, endPty: float64): void {.importc: "QPainterPath_cubicTo2".}
proc fcQPainterPath_quadTo(self: pointer, ctrlPt: pointer, endPt: pointer): void {.importc: "QPainterPath_quadTo".}
proc fcQPainterPath_quadTo2(self: pointer, ctrlPtx: float64, ctrlPty: float64, endPtx: float64, endPty: float64): void {.importc: "QPainterPath_quadTo2".}
proc fcQPainterPath_currentPosition(self: pointer): pointer {.importc: "QPainterPath_currentPosition".}
proc fcQPainterPath_addRect(self: pointer, rect: pointer): void {.importc: "QPainterPath_addRect".}
proc fcQPainterPath_addRect2(self: pointer, x: float64, y: float64, w: float64, h: float64): void {.importc: "QPainterPath_addRect2".}
proc fcQPainterPath_addEllipse(self: pointer, rect: pointer): void {.importc: "QPainterPath_addEllipse".}
proc fcQPainterPath_addEllipse2(self: pointer, x: float64, y: float64, w: float64, h: float64): void {.importc: "QPainterPath_addEllipse2".}
proc fcQPainterPath_addEllipse3(self: pointer, center: pointer, rx: float64, ry: float64): void {.importc: "QPainterPath_addEllipse3".}
proc fcQPainterPath_addText(self: pointer, point: pointer, f: pointer, text: struct_miqt_string): void {.importc: "QPainterPath_addText".}
proc fcQPainterPath_addText2(self: pointer, x: float64, y: float64, f: pointer, text: struct_miqt_string): void {.importc: "QPainterPath_addText2".}
proc fcQPainterPath_addPath(self: pointer, path: pointer): void {.importc: "QPainterPath_addPath".}
proc fcQPainterPath_addRegion(self: pointer, region: pointer): void {.importc: "QPainterPath_addRegion".}
proc fcQPainterPath_addRoundedRect(self: pointer, rect: pointer, xRadius: float64, yRadius: float64): void {.importc: "QPainterPath_addRoundedRect".}
proc fcQPainterPath_addRoundedRect2(self: pointer, x: float64, y: float64, w: float64, h: float64, xRadius: float64, yRadius: float64): void {.importc: "QPainterPath_addRoundedRect2".}
proc fcQPainterPath_connectPath(self: pointer, path: pointer): void {.importc: "QPainterPath_connectPath".}
proc fcQPainterPath_contains(self: pointer, pt: pointer): bool {.importc: "QPainterPath_contains".}
proc fcQPainterPath_containsWithRect(self: pointer, rect: pointer): bool {.importc: "QPainterPath_containsWithRect".}
proc fcQPainterPath_intersects(self: pointer, rect: pointer): bool {.importc: "QPainterPath_intersects".}
proc fcQPainterPath_translate(self: pointer, dx: float64, dy: float64): void {.importc: "QPainterPath_translate".}
proc fcQPainterPath_translateWithOffset(self: pointer, offset: pointer): void {.importc: "QPainterPath_translateWithOffset".}
proc fcQPainterPath_translated(self: pointer, dx: float64, dy: float64): pointer {.importc: "QPainterPath_translated".}
proc fcQPainterPath_translatedWithOffset(self: pointer, offset: pointer): pointer {.importc: "QPainterPath_translatedWithOffset".}
proc fcQPainterPath_boundingRect(self: pointer): pointer {.importc: "QPainterPath_boundingRect".}
proc fcQPainterPath_controlPointRect(self: pointer): pointer {.importc: "QPainterPath_controlPointRect".}
proc fcQPainterPath_fillRule(self: pointer): cint {.importc: "QPainterPath_fillRule".}
proc fcQPainterPath_setFillRule(self: pointer, fillRule: cint): void {.importc: "QPainterPath_setFillRule".}
proc fcQPainterPath_isEmpty(self: pointer): bool {.importc: "QPainterPath_isEmpty".}
proc fcQPainterPath_toReversed(self: pointer): pointer {.importc: "QPainterPath_toReversed".}
proc fcQPainterPath_elementCount(self: pointer): cint {.importc: "QPainterPath_elementCount".}
proc fcQPainterPath_elementAt(self: pointer, i: cint): pointer {.importc: "QPainterPath_elementAt".}
proc fcQPainterPath_setElementPositionAt(self: pointer, i: cint, x: float64, y: float64): void {.importc: "QPainterPath_setElementPositionAt".}
proc fcQPainterPath_length(self: pointer): float64 {.importc: "QPainterPath_length".}
proc fcQPainterPath_percentAtLength(self: pointer, t: float64): float64 {.importc: "QPainterPath_percentAtLength".}
proc fcQPainterPath_pointAtPercent(self: pointer, t: float64): pointer {.importc: "QPainterPath_pointAtPercent".}
proc fcQPainterPath_angleAtPercent(self: pointer, t: float64): float64 {.importc: "QPainterPath_angleAtPercent".}
proc fcQPainterPath_slopeAtPercent(self: pointer, t: float64): float64 {.importc: "QPainterPath_slopeAtPercent".}
proc fcQPainterPath_intersectsWithQPainterPath(self: pointer, p: pointer): bool {.importc: "QPainterPath_intersectsWithQPainterPath".}
proc fcQPainterPath_containsWithQPainterPath(self: pointer, p: pointer): bool {.importc: "QPainterPath_containsWithQPainterPath".}
proc fcQPainterPath_united(self: pointer, r: pointer): pointer {.importc: "QPainterPath_united".}
proc fcQPainterPath_intersected(self: pointer, r: pointer): pointer {.importc: "QPainterPath_intersected".}
proc fcQPainterPath_subtracted(self: pointer, r: pointer): pointer {.importc: "QPainterPath_subtracted".}
proc fcQPainterPath_simplified(self: pointer): pointer {.importc: "QPainterPath_simplified".}
proc fcQPainterPath_operatorEqual(self: pointer, other: pointer): bool {.importc: "QPainterPath_operatorEqual".}
proc fcQPainterPath_operatorNotEqual(self: pointer, other: pointer): bool {.importc: "QPainterPath_operatorNotEqual".}
proc fcQPainterPath_operatorBitwiseAnd(self: pointer, other: pointer): pointer {.importc: "QPainterPath_operatorBitwiseAnd".}
proc fcQPainterPath_operatorBitwiseOr(self: pointer, other: pointer): pointer {.importc: "QPainterPath_operatorBitwiseOr".}
proc fcQPainterPath_operatorPlus(self: pointer, other: pointer): pointer {.importc: "QPainterPath_operatorPlus".}
proc fcQPainterPath_operatorMinus(self: pointer, other: pointer): pointer {.importc: "QPainterPath_operatorMinus".}
proc fcQPainterPath_operatorBitwiseAndAssign(self: pointer, other: pointer): void {.importc: "QPainterPath_operatorBitwiseAndAssign".}
proc fcQPainterPath_operatorBitwiseOrAssign(self: pointer, other: pointer): void {.importc: "QPainterPath_operatorBitwiseOrAssign".}
proc fcQPainterPath_operatorPlusAssign(self: pointer, other: pointer): pointer {.importc: "QPainterPath_operatorPlusAssign".}
proc fcQPainterPath_operatorMinusAssign(self: pointer, other: pointer): pointer {.importc: "QPainterPath_operatorMinusAssign".}
proc fcQPainterPath_addRoundedRect4(self: pointer, rect: pointer, xRadius: float64, yRadius: float64, mode: cint): void {.importc: "QPainterPath_addRoundedRect4".}
proc fcQPainterPath_addRoundedRect7(self: pointer, x: float64, y: float64, w: float64, h: float64, xRadius: float64, yRadius: float64, mode: cint): void {.importc: "QPainterPath_addRoundedRect7".}
proc fcQPainterPath_new(): ptr cQPainterPath {.importc: "QPainterPath_new".}
proc fcQPainterPath_new2(startPoint: pointer): ptr cQPainterPath {.importc: "QPainterPath_new2".}
proc fcQPainterPath_new3(other: pointer): ptr cQPainterPath {.importc: "QPainterPath_new3".}
proc fcQPainterPathStroker_setWidth(self: pointer, width: float64): void {.importc: "QPainterPathStroker_setWidth".}
proc fcQPainterPathStroker_width(self: pointer): float64 {.importc: "QPainterPathStroker_width".}
proc fcQPainterPathStroker_setCapStyle(self: pointer, style: cint): void {.importc: "QPainterPathStroker_setCapStyle".}
proc fcQPainterPathStroker_capStyle(self: pointer): cint {.importc: "QPainterPathStroker_capStyle".}
proc fcQPainterPathStroker_setJoinStyle(self: pointer, style: cint): void {.importc: "QPainterPathStroker_setJoinStyle".}
proc fcQPainterPathStroker_joinStyle(self: pointer): cint {.importc: "QPainterPathStroker_joinStyle".}
proc fcQPainterPathStroker_setMiterLimit(self: pointer, length: float64): void {.importc: "QPainterPathStroker_setMiterLimit".}
proc fcQPainterPathStroker_miterLimit(self: pointer): float64 {.importc: "QPainterPathStroker_miterLimit".}
proc fcQPainterPathStroker_setCurveThreshold(self: pointer, threshold: float64): void {.importc: "QPainterPathStroker_setCurveThreshold".}
proc fcQPainterPathStroker_curveThreshold(self: pointer): float64 {.importc: "QPainterPathStroker_curveThreshold".}
proc fcQPainterPathStroker_setDashPattern(self: pointer, dashPattern: cint): void {.importc: "QPainterPathStroker_setDashPattern".}
proc fcQPainterPathStroker_setDashPatternWithDashPattern(self: pointer, dashPattern: struct_miqt_array): void {.importc: "QPainterPathStroker_setDashPatternWithDashPattern".}
proc fcQPainterPathStroker_dashPattern(self: pointer): struct_miqt_array {.importc: "QPainterPathStroker_dashPattern".}
proc fcQPainterPathStroker_setDashOffset(self: pointer, offset: float64): void {.importc: "QPainterPathStroker_setDashOffset".}
proc fcQPainterPathStroker_dashOffset(self: pointer): float64 {.importc: "QPainterPathStroker_dashOffset".}
proc fcQPainterPathStroker_createStroke(self: pointer, path: pointer): pointer {.importc: "QPainterPathStroker_createStroke".}
proc fcQPainterPathStroker_new(): ptr cQPainterPathStroker {.importc: "QPainterPathStroker_new".}
proc fcQPainterPathStroker_new2(pen: pointer): ptr cQPainterPathStroker {.importc: "QPainterPathStroker_new2".}
proc fcQPainterPathElement_isMoveTo(self: pointer): bool {.importc: "QPainterPath__Element_isMoveTo".}
proc fcQPainterPathElement_isLineTo(self: pointer): bool {.importc: "QPainterPath__Element_isLineTo".}
proc fcQPainterPathElement_isCurveTo(self: pointer): bool {.importc: "QPainterPath__Element_isCurveTo".}
proc fcQPainterPathElement_ToQPointF(self: pointer): pointer {.importc: "QPainterPath__Element_ToQPointF".}
proc fcQPainterPathElement_operatorEqual(self: pointer, e: pointer): bool {.importc: "QPainterPath__Element_operatorEqual".}
proc fcQPainterPathElement_operatorNotEqual(self: pointer, e: pointer): bool {.importc: "QPainterPath__Element_operatorNotEqual".}

proc operatorAssign*(self: gen_qpainterpath_types.QPainterPath, other: gen_qpainterpath_types.QPainterPath): void =
  fcQPainterPath_operatorAssign(self.h, other.h)

proc swap*(self: gen_qpainterpath_types.QPainterPath, other: gen_qpainterpath_types.QPainterPath): void =
  fcQPainterPath_swap(self.h, other.h)

proc clear*(self: gen_qpainterpath_types.QPainterPath): void =
  fcQPainterPath_clear(self.h)

proc reserve*(self: gen_qpainterpath_types.QPainterPath, size: cint): void =
  fcQPainterPath_reserve(self.h, size)
